// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Status render animated 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  75%, 100% {
    -webkit-transform: scale(2);
    -moz-transform: scale(2);
    -ms-transform: scale(2);
    transform: scale(2);
    opacity: 0;
  }
}

.css-1oymmk9-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 10px;
  height: 10px;
}

.css-vlmqa1-StyledAnimatedCircle {
  position: absolute;
  width: 10px;
  height: 10px;
  opacity: 0.75;
  border-radius: 100%;
  -webkit-animation: animation-0 1.1s cubic-bezier(0, 0, 0.2, 1) infinite;
  animation: animation-0 1.1s cubic-bezier(0, 0, 0.2, 1) infinite;
  background-color: #2c8564;
}

.css-1kgo85m-StyledCircle {
  display: inline-block;
  width: 10px;
  height: 10px;
  border-radius: 100%;
  background-color: #2c8564;
}

<span
    class="css-1oymmk9-Container eny0xmn0"
  >
    <span
      class="css-vlmqa1-StyledAnimatedCircle eny0xmn1"
    />
    <span
      class="css-1kgo85m-StyledCircle eny0xmn2"
    />
  </span>
</DocumentFragment>
`;

exports[`Status render with className 1`] = `
<DocumentFragment>
  .css-1oymmk9-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 10px;
  height: 10px;
}

.css-1kgo85m-StyledCircle {
  display: inline-block;
  width: 10px;
  height: 10px;
  border-radius: 100%;
  background-color: #2c8564;
}

<span
    class="test css-1oymmk9-Container eny0xmn0"
  >
    <span
      class="css-1kgo85m-StyledCircle eny0xmn2"
    />
  </span>
</DocumentFragment>
`;

exports[`Status renders correctly with type="danger" 1`] = `
<DocumentFragment>
  .css-1oymmk9-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 10px;
  height: 10px;
}

.css-b2epwk-StyledCircle {
  display: inline-block;
  width: 10px;
  height: 10px;
  border-radius: 100%;
  background-color: #e51963;
}

<span
    class="css-1oymmk9-Container eny0xmn0"
  >
    <span
      class="css-b2epwk-StyledCircle eny0xmn2"
    />
  </span>
</DocumentFragment>
`;

exports[`Status renders correctly with type="info" 1`] = `
<DocumentFragment>
  .css-1oymmk9-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 10px;
  height: 10px;
}

.css-3mqsje-StyledCircle {
  display: inline-block;
  width: 10px;
  height: 10px;
  border-radius: 100%;
  background-color: #0078d2;
}

<span
    class="css-1oymmk9-Container eny0xmn0"
  >
    <span
      class="css-3mqsje-StyledCircle eny0xmn2"
    />
  </span>
</DocumentFragment>
`;

exports[`Status renders correctly with type="neutral" 1`] = `
<DocumentFragment>
  .css-1oymmk9-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 10px;
  height: 10px;
}

.css-197fzv5-StyledCircle {
  display: inline-block;
  width: 10px;
  height: 10px;
  border-radius: 100%;
  background-color: #151a2d;
}

<span
    class="css-1oymmk9-Container eny0xmn0"
  >
    <span
      class="css-197fzv5-StyledCircle eny0xmn2"
    />
  </span>
</DocumentFragment>
`;

exports[`Status renders correctly with type="success" 1`] = `
<DocumentFragment>
  .css-1oymmk9-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 10px;
  height: 10px;
}

.css-1kgo85m-StyledCircle {
  display: inline-block;
  width: 10px;
  height: 10px;
  border-radius: 100%;
  background-color: #2c8564;
}

<span
    class="css-1oymmk9-Container eny0xmn0"
  >
    <span
      class="css-1kgo85m-StyledCircle eny0xmn2"
    />
  </span>
</DocumentFragment>
`;

exports[`Status renders correctly with type="warning" 1`] = `
<DocumentFragment>
  .css-1oymmk9-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 10px;
  height: 10px;
}

.css-p1a4wa-StyledCircle {
  display: inline-block;
  width: 10px;
  height: 10px;
  border-radius: 100%;
  background-color: #fbc600;
}

<span
    class="css-1oymmk9-Container eny0xmn0"
  >
    <span
      class="css-p1a4wa-StyledCircle eny0xmn2"
    />
  </span>
</DocumentFragment>
`;
